# skeleton-animation-editor

./: .gitignore  README.md  Session.vim  \  compile_commands.json  curveLine.hpp  pattern.hpp  readme.MD  w
b/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  vleftpose.pose
b/res/: Makefile  cmake_install.cmake
b/src/: Makefile  cmake_install.cmake
b/src/cgra/: Makefile  cmake_install.cmake
b2/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
b2/res/: Makefile  cmake_install.cmake
b2/src/: Makefile  cmake_install.cmake
b2/src/cgra/: Makefile  cmake_install.cmake
carnegie-mellon/: 38.asf  38_run-circle.amc  38_walk.amc  football-thro-catch.asf  football-throw-catch.amc
skeleton-assets/: test_bone_2.asf
srctree/: CMakeLists.txt  compile_commands.json
srctree/include/skeleton/: skeleton.cpp  skeleton.hpp
srctree/include/skeleton/__MACOSX/: ._skeleton.cpp  ._skeleton.hpp
srctree/res/models/: zpole.blend  zpole.blend1
srctree/res/shaders/: lambert.fs.glsl  pick.fs.glsl  simple.fs.glsl
srctree/src/: CMakeLists.txt  a3-filesave.cpp  a3.cpp  a3.hpp  a3_dogui.cpp  a3_fileread.cpp  a3_inevents.cpp  a3_kfwin.cpp  app_renderer.cpp  app_renderer.hpp  asf.cpp  asf.hpp  asf_files.cpp  boneCurve.cpp  boneCurve.hpp  boneTrack.hpp  callbacks.cpp  callbacks.hpp  cmake_install.cmake  drawStyle.hpp  ex1.cpp  ex1.hpp  includes-l1.hpp  main.cpp  pattern.hpp  pose.hpp  splineMath.cpp  splineMath.hpp
srctree/src/cgra/: mesh.hpp  shader.hpp
